# xtgeoip

./: .Cargo.toml.swp  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  TODO_tldr.md  bla  latest  main.rs  patch-config.diff  rustfmt.toml
.github/workflows/: rust.yml
.vim-llm-agent/: history.txt
conf/: xtgeoip.conf.example
conf/etc/logrotate.d/: xtgeoip
conf/usr/share/xt_geoip/: xtgeoip.conf.example
doc/: legacy.md  usage.md  usage.tmp  xtgeoip-usage.md  xtgeoip-usage.yaml
docs/: design.md  guardian_public.asc  legacy.md  xtgeoip-wip.1
docs/design/: 29-ambiguity-planner-vs-guards.md  98-state-ownership-recovery.md  spec-driven-validator.md
docs/spec/: cli-prose.md  cli-update.md  cli.yaml  manpage-template.toml  semantics.yaml
extra/dkms/: INSTALL.rst  README.rst  xt-geoip.8
extra/ufw/: before.rules.add  before6.rules.add
src/: action.rs  backup.rs  build.rs  cli.rs  cli_snapshot.golden  conf.rs  config.rs  fetch.rs  fetch.rs.sig  main.rs  messages.rs  version.rs
src/templates/: main.tpl
