[package]
name = "xtgeoip"
version = "0.0.28"
edition = "2024"
authors = ["Homer at hazensparkle.co.uk"]
repository = "https://github.com/HomerSlated/xtgeoip"
license = "MIT"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE", "docs/**", "conf/**"]

[dependencies]
sha2 = "0.10.9"
zip = "8.1.0"
anyhow = "1.0.102"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["blocking", "json", "gzip", "rustls"] }
toml = "1.0.6"
csv = "1.4.0"
ipnetwork = "0.21.1"
ipnet = "2.12.0"
io = "0.0.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
tar = "0.4.45"
flate2 = "1.1.9"
glob = "0.3.3"
clap = { version = "4.6.0", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.149"
tera = "1.20.1"
chrono = "0.4.44"
log = "0.4.29"
simplelog = "0.12.2"
syslog = "7.0.0"

[[bin]]
name = "xtgeoip-docgen"
path = "src/bin/xtgeoip-docgen.rs"
